--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -19,8 +19,12 @@
     <%= form.select :type_id, @types.collect { |t| [t.name, t.id ]}, {include_blank: "Please select a type"} %>
   </div>
 
-  <div class="form-group">
-    <%= form.text_field :vegetarian, placeholder: "Veg?", class: "form-control" %>
+  <div>
+
+  <label class="checkbox-inline">Veg?
+    <!-- <input type="checkbox" value="">Y</label> -->
+    <%= form.check_box :vegetarian, placeholder: "Veg?", class: "checkbox-inline" %>
+  </label>
   </div>
 
   <div class="form-group">
